--- a/Prevu.Synoptics.V2451_Biffa/ST.xaml
+++ b/Prevu.Synoptics.V2451_Biffa/ST.xaml
@@ -69,7 +69,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="697,206,0,0" VerticalAlignment="Top" Height="76" Width="72"/>
+		<Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="697,207,0,0" VerticalAlignment="Top" Height="69" Width="68"/>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="450,358,0,0" VerticalAlignment="Top" Color="Water" Width="88" StatusComponent="450-21-CV1"/>
 		<Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="507,310,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
 			<Machines:CV_Valve_001.RenderTransform>
@@ -91,7 +91,7 @@
 				</TransformGroup>
 			</Machines:SCW_ScrewConveyor_straight.RenderTransform>
 		</Machines:SCW_ScrewConveyor_straight>
-		<Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="355,229,0,0" VerticalAlignment="Top" Height="152" Width="160"/>
+		<Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="396,231,0,0" VerticalAlignment="Top" Height="139" Width="110"/>
 		<Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="797,625,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="118">
 			<Machines:SCW_ScrewConveyor_straight.RenderTransform>
 				<TransformGroup>
@@ -103,7 +103,7 @@
 			</Machines:SCW_ScrewConveyor_straight.RenderTransform>
 		</Machines:SCW_ScrewConveyor_straight>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
-          Margin="390,168,0,0" 
+          Margin="398,173,0,0" 
           VerticalAlignment="Top" 
           ComponentName="480-01-MA1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -134,5 +134,9 @@
             Margin="985,628,0,0" 
             VerticalAlignment="Top" 
             ComponentName="812-71-PC1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" 
+		Margin="892,374,0,0" 
+		VerticalAlignment="Top" 
+		ComponentName="810-01-SILO"/>
 	</Grid>
 </UserControl>
