--- a/Prevu.Synoptics.V2451_Biffa/WH1.xaml
+++ b/Prevu.Synoptics.V2451_Biffa/WH1.xaml
@@ -59,7 +59,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Machines:VB_VibratingScreen HorizontalAlignment="Left" Margin="825,493,0,0" VerticalAlignment="Top"/>
+		<Machines:VB_VibratingScreen HorizontalAlignment="Left" Margin="829,500,0,0" VerticalAlignment="Top" Height="93" Width="96"/>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="666,735,0,0" VerticalAlignment="Top" Width="196" Color="Water" StatusComponent="450-02-MA1"/>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="539,589,0,0" VerticalAlignment="Top" Color="Water" Width="188" RenderTransformOrigin="0.5,0.5" StatusComponent="470-02-MA1" VisibilityComponent="470-23-CV2" Height="5">
 			<Labels:Pipe.RenderTransform>
@@ -130,7 +130,7 @@
 				</TransformGroup>
 			</Machines:WaterPump.RenderTransform>
 		</Machines:WaterPump>
-		<Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="498,625,0,0" VerticalAlignment="Top" Height="196" Width="344"/>
+		<Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="554,680,0,0" VerticalAlignment="Top" Height="105" Width="240"/>
 		<Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="494,587,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
 			<Machines:CV_Valve_001.RenderTransform>
 				<TransformGroup>
@@ -151,7 +151,7 @@
 				</TransformGroup>
 			</Machines:WaterPump.RenderTransform>
 		</Machines:WaterPump>
-		<Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="580,194,0,0" VerticalAlignment="Top" Height="204" Width="150" RenderTransformOrigin="0.5,0.5">
+		<Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="592,221,0,0" VerticalAlignment="Top" Height="163" Width="115" RenderTransformOrigin="0.5,0.5">
 			<Machines:DCE_DryingCentrifuge.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -289,7 +289,7 @@
 			</Labels:DeviceLabel.RenderTransform>
 		</Labels:DeviceLabel>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="563,188,0,0" 
+            Margin="575,190,0,0" 
             VerticalAlignment="Top" 
             ComponentName="455-01-MA1" RenderTransformOrigin="0.567,-2.17"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
