Deleted "Loaded" err V2048

--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/D880.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/D880.xaml
@@ -10,7 +10,7 @@
              mc:Ignorable="d" 
              Height="500" Width="600" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid d:IsLocked="True">
-        <Separation:FKS_FlakesSorter HorizontalAlignment="Center" Margin="0,52,0,52" Width="430" Loaded="FKS_FlakesSorter_Loaded" d:IsLocked="True"/>
+        <Separation:FKS_FlakesSorter HorizontalAlignment="Center" Margin="0,52,0,52" Width="430" d:IsLocked="True"/>
         <Labels:SignalLabel HorizontalAlignment="Left" Margin="240,70,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSHA" d:IsLocked="True"/>
         <Labels:SignalLabel HorizontalAlignment="Left" Margin="240,134,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSH" d:IsLocked="True" />
         <Labels:SignalLabel HorizontalAlignment="Left" Margin="222,207,0,0" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSL" d:IsLocked="True"/>
