--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/D885.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/D885.xaml
@@ -21,7 +21,7 @@
             </Screws:DETAIL_SCW_Flex_Verticale.RenderTransform>
         </Screws:DETAIL_SCW_Flex_Verticale>
         <Labels:SignalLabel HorizontalAlignment="Left" Margin="381,406,0,0" VerticalAlignment="Top" ComponentName="885-61-LEV" SignalName="LSHA" d:IsLocked="True"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" Margin="313,484,0,0" VerticalAlignment="Top" ComponentName="885-61-LEV" SignalName="LSL" Loaded="SignalLabel_Loaded" d:IsLocked="True" />
+        <Labels:SignalLabel HorizontalAlignment="Left" Margin="313,484,0,0" VerticalAlignment="Top" ComponentName="885-61-LEV" SignalName="LSL"  d:IsLocked="True" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="179,498,0,0" 
             VerticalAlignment="Top" 
