--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/P018.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/P018.xaml
@@ -17,7 +17,7 @@
                 <TranslateTransform/>
             </TransformGroup>
         </Grid.RenderTransform>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="852,585,0,0" VerticalAlignment="Top" Width="238" StatusComponent="031-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Loaded="Pipe_Loaded" Height="10" d:IsLocked="True">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="852,585,0,0" VerticalAlignment="Top" Width="238" StatusComponent="031-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" d:IsLocked="True">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -27,7 +27,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="877,613,0,0" VerticalAlignment="Top" Width="154" StatusComponent="180-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Loaded="Pipe_Loaded" Height="10" d:IsLocked="True">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="877,613,0,0" VerticalAlignment="Top" Width="154" StatusComponent="180-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" d:IsLocked="True">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -133,7 +133,7 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="824,540,0,0" VerticalAlignment="Top" Width="134" StatusComponent="180-01-MA1" PipeHeight="Medium" d:IsLocked="True"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="966,470,0,0" VerticalAlignment="Top" Width="291" StatusComponent="031-01-MA1" PipeHeight="Medium" d:IsLocked="True"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1188,411,0,0" VerticalAlignment="Top" Width="128" StatusComponent="031-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Loaded="Pipe_Loaded" Height="10" d:IsLocked="True">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1188,411,0,0" VerticalAlignment="Top" Width="128" StatusComponent="031-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" d:IsLocked="True">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
