--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/P230.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/P230.xaml
@@ -315,7 +315,7 @@
             </Machines:SCW_ScrewConveyor_inclined.RenderTransform>
         </Machines:SCW_ScrewConveyor_inclined>
         <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="432,580,0,0" VerticalAlignment="Top" Height="70" Width="64" d:IsLocked="True"/>
-        <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="260,691,0,0" VerticalAlignment="Top" Height="78" Width="93" Loaded="VRC_WaterCollectingTank_Loaded" d:IsLocked="True"/>
+        <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="260,691,0,0" VerticalAlignment="Top" Height="78" Width="93"  d:IsLocked="True"/>
         <Rectangle HorizontalAlignment="Left" Height="164" Margin="294,32,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5" d:IsLocked="True">
             <Rectangle.RenderTransform>
                 <TransformGroup>
