--- a/Prevu.Synoptics.V3001-COVERIS/P230.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P230.xaml
@@ -207,7 +207,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="938,519,0,0" VerticalAlignment="Top" Width="66" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="22"/>
-        <Rectangle HorizontalAlignment="Left" Height="745" Stroke="Black" VerticalAlignment="Center" Width="642" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Margin="79,0,0,0" d:IsLocked="True"/>
+        <Rectangle HorizontalAlignment="Left" Height="745" Stroke="Black" VerticalAlignment="Center" Width="642" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Margin="79,0,0,0"/>
         <Rectangle HorizontalAlignment="Left" Height="2" Margin="903,358,0,0" Stroke="Black" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <TransformGroup>
