--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/P320.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/P320.xaml
@@ -227,7 +227,7 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="470,488,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="273-01-LP1"/>
+            ComponentName="273-01-YA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="167,628,0,0" 
             VerticalAlignment="Top" 
