--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/D883.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/D883.xaml
@@ -9,17 +9,17 @@
              xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" xmlns:Screws="clr-namespace:Prevu.Drawings.Machines.Screws;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D883" 
              mc:Ignorable="d" 
              Height="600" Width="600" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid d:IsLocked="True">
-        <Screws:DETAIL_SCW_Flex_Verticale HorizontalAlignment="Center" Margin="0,82,0,38" Width="254" d:IsLocked="True"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" Margin="135,406,0,0" VerticalAlignment="Top" ComponentName="883-61-LEV" SignalName="LSHA" FlowDirection="RightToLeft" d:IsLocked="True"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" Margin="216,484,0,0" VerticalAlignment="Top" ComponentName="883-61-LEV" SignalName="LSL" FlowDirection="RightToLeft" d:IsLocked="True" />
+    <Grid>
+        <Screws:DETAIL_SCW_Flex_Verticale HorizontalAlignment="Center" Margin="0,82,0,38" Width="254"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" Margin="148,406,0,0" VerticalAlignment="Top" ComponentName="883-61-LEV" SignalName="LSH" FlowDirection="RightToLeft"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" Margin="216,484,0,0" VerticalAlignment="Top" ComponentName="883-61-LEV" SignalName="LSL" FlowDirection="RightToLeft" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
          Margin="331,498,0,0" 
          VerticalAlignment="Top" 
-         ComponentName="883-61-LEV" d:IsLocked="True"/>
+         ComponentName="883-61-LEV"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="193,27,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="883-01-MA1" d:IsLocked="True"/>
+            ComponentName="883-01-MA1"/>
     </Grid>
 </UserControl>
